added templated widget example. resolves #2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             height: 200px;
         }
     </style>
-    <script> 
+    <script>
         var dojoConfig = {
             parseOnLoad: true,
             packages: [
@@ -31,6 +31,7 @@
     <div id="mapDivA"></div>
     <div id="mapDivB"></div>
     <div id="mapDivC"></div>
+    <div id="templatedWidget"></div>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
