added a single build option to Gruntfile and build dependencies

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script>
         var dojoConfig = {
             parseOnLoad: true,
+            aliases: [['text', 'dojo/text'], ['domReady', 'dojo/domReady']],
             packages: [
                 { name: "app", location: location.pathname.replace(/[^\/]+$/, '') + "js/app" }
             ]
