--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="http://js.arcgis.com/3.7/js/dojo/dijit/themes/claro/claro.css">
     <link rel="stylesheet" href="http://js.arcgis.com/3.7/js/esri/css/esri.css">
-    <style>
-        html, body {
-            padding: 0;
-            margin: 0;
-        }
-
-        #mapDivA, #mapDivB, #mapDivC {
-            height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/app.css">
     <script>
         var dojoConfig = {
             parseOnLoad: true,
