Add i18n example. Resolves #12

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script>
         var dojoConfig = {
             parseOnLoad: true,
-            aliases: [['text', 'dojo/text'], ['domReady', 'dojo/domReady']],
+            aliases: [['text', 'dojo/text'], ['domReady', 'dojo/domReady'], ['i18n', 'dojo/i18n']],
             packages: [
                 { name: "app", location: location.pathname.replace(/[^\/]+$/, '') + "js/app" }
             ]
