--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <script>
         var dojoConfig = {
             parseOnLoad: true,
+            // locale: "es",
             aliases: [['text', 'dojo/text'], ['domReady', 'dojo/domReady'], ['i18n', 'dojo/i18n']],
             packages: [
                 { name: "app", location: location.pathname.replace(/[^\/]+$/, '') + "js/app" }
